# loadtime

./: DESIGN.md  MANIFEST.in  README.md  README_ja.md  setup.cfg  setup.py
examples/: example.py
loadtime/: __init__.py  load_time.py
tests/: test_load_time.py
