[metadata]
name = loadtime
version = 1.0.0
author = Tom Misawa
author_email = riversun.org@gmail.com
description = Package to display a progress bar for long processes with uncertain end times
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riversun/LoadTime
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
python_requires = >=3.8
